<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TipspengendaramobilActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:orientation="vertical">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tips Untuk Pengendara Mobil"
                android:textAlignment="center"
                android:textSize="25dp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1. Periksa kendaraan secara berkala"
                android:textAlignment="gravity"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/periksa_kendaraan_secara_berkala"
                android:textAlignment="gravity"
                android:textSize="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2. Kenali diri"
                android:textAlignment="gravity"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kenali_diri"
                android:textAlignment="gravity"
                android:textSize="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="3. Atur posisi mengemudi"
                android:textAlignment="gravity"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/atur_posisi_mengemudi"
                android:textAlignment="gravity"
                android:textSize="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="4. Pakai sabuk pengaman"
                android:textAlignment="gravity"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pakai_sabuk_pengaman"
                android:textAlignment="gravity"
                android:textSize="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="5. Ikuti arus lalu lintas"
                android:textAlignment="gravity"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ikuti_arus_lalu_lintas"
                android:textAlignment="gravity"
                android:textSize="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="6. Perlahan tapi pasti"
                android:textAlignment="gravity"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/perlahan_tapi_pasti"
                android:textAlignment="gravity"
                android:textSize="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="7. Gunakan rem pada saat yang tepat"
                android:textAlignment="gravity"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gunakan_rem_pada_saat_yang_tepat"
                android:textAlignment="gravity"
                android:textSize="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gunakan_rem_pada_saat_yang_tepat2"
                android:textAlignment="gravity"
                android:textSize="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="8. Atur kecepatan berkendara"
                android:textAlignment="gravity"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/atur_kecepatan_berkendara"
                android:textAlignment="gravity"
                android:textSize="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="9. Jangan bermain telepon genggam"
                android:textAlignment="gravity"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jangan_bermain_telepon_genggam"
                android:textAlignment="gravity"
                android:textSize="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jangan_bermain_telepon_genggam2"
                android:textAlignment="gravity"
                android:textSize="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jangan_bermain_telepon_genggam3"
                android:textAlignment="gravity"
                android:textSize="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="10. Jangan membawa beban secara berlebihan"
                android:textAlignment="gravity"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jangan_membawa_beban_secara_berlebihan"
                android:textAlignment="gravity"
                android:textSize="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="11. Bila mengalami kecelakaan"
                android:textAlignment="gravity"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bila_mengalami_kecelakaan"
                android:textAlignment="gravity"
                android:textSize="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"/>
    </LinearLayout>
</ScrollView>